...
        android:layout_width="match_parent"
        android:layout_height="@dimen/alertDialog_bordeWidth"
        android:background="@color/white"
        android:orientation="vertical"></LinearLayout>

    <EditText
        android:id="@+id/editTextCorreoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertDialog_margin"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_drawer"
        android:ems="10"
...
            android:textColor="@color/white"
            android:background="@drawable/button_inicio"
            android:layout_weight="1"
            android:text="@string/ad_ConfigCancelar" />

        <Button
            android:id="@+id/buttonADCorreoAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alertDialog_margin"
            android:textColor="@color/white"
            android:background="@drawable/button_inicio"
            android:layout_weight="1"
...
