...
                android:src="@drawable/ic_launcher_foreground"
                app:civ_border_color="@color/white"
                app:civ_border_width="5dp">
            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/textViewConfigUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ad_ConfigUsuario"
                android:textSize="@dimen/configuracion_textViewSize"
                android:layout_marginTop="@dimen/configuracion_usuarioMarginTop"
                android:layout_marginBottom="@dimen/configuracion_usuarioMarginBottom"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewConfigCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ad_ConfigCorreo"
                android:textSize="@dimen/configuracion_textViewSize"
                android:textColor="@color/white"
...
