<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Titulo: "
            android:textColor="@color/white"
            android:textSize="@dimen/titulos_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peliculasRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerView_margin"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/busqueda_buttonMarginBottom"
        android:background="@drawable/borde_redondos"
        android:backgroundTint="@color/color_principal"
        android:drawableLeft="@drawable/ic_baseline_search_24_white"
        android:padding="@dimen/buttonPadding"
        android:text="@string/bt_BusquedaBuscar"
        android:textAlignment="center"
        android:textColor="#FEFEFE" />

</LinearLayout>