...
        android:layout_height="match_parent"
        android:gravity="center"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextViewDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detalle_separacionWidgets"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/detalle_titulosSize"
...
                android:text="@string/tv_DetalleDuracion"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/detalle_titulosSize"></TextView>

            <TextView
                android:id="@+id/duracionTextViewDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_startMargin"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/detalle_titulosSize"
...
